--- a/veolia_water/config.json
+++ b/veolia_water/config.json
@@ -1,11 +1,12 @@
 {
   "name": "Veolia Water Consumption",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "slug": "veolia_water",
   "description": "Fetch water consumption data from Veolia",
   "startup": "services",
   "arch": ["armv7", "armhf", "aarch64", "amd64", "i386"],
   "boot": "auto",
+  "init": false,
   "options": {
     "email": "your-email@example.com",
     "password": "your-password",
