modified:   custom_components/veolia_water/manifest.json 	modified:   custom_components/veolia_water/sensor.py

--- a/custom_components/veolia_water/manifest.json
+++ b/custom_components/veolia_water/manifest.json
@@ -5,7 +5,7 @@
     "documentation": "https://github.com/your_github_username/veolia_water",
     "requirements": ["xmltodict", "requests", "voluptuous"],
     "dependencies": [],
-    "codeowners": ["@your_github_username"],
+    "codeowners": ["@McSon2"],
     "config_flow": true
   }
   
