modified:   custom_components/veolia_water/config_flow.py 	modified:   custom_components/veolia_water/manifest.json 	modified:   custom_components/veolia_water/sensor.py

--- a/custom_components/veolia_water/manifest.json
+++ b/custom_components/veolia_water/manifest.json
@@ -3,7 +3,7 @@
     "name": "Veolia Water",
     "version": "1.0",
     "documentation": "https://github.com/your_github_username/veolia_water",
-    "requirements": ["xmltodict", "requests", "voluptuous"],
+    "requirements": ["xmltodict", "requests"],
     "dependencies": [],
     "codeowners": ["@McSon2"],
     "config_flow": true
